# schemainspect

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
schemainspect/: __init__.py  get.py  inspected.py  inspector.py  misc.py
schemainspect/pg/: obj.py
tests/: test_all.py  test_collations.py  test_deps.py  test_indexes.py  test_partitioning.py  test_privileges.py  test_rls.py  test_singleschema.py  test_types.py
