[tool.poetry]
name = "schemainspect"
version = "0.1"
authors = [ "Robert Lechte <robertlechte@gmail.com>",]
license = "Unlicense"
readme = "README.md"
description = "Schema inspection for PostgreSQL (and possibly others)"

repository = "https://github.com/djrobstep/schemainspect"
homepage = "https://github.com/djrobstep/schemainspect"

[tool.poetry.dependencies]
python = ">=3.6"
sqlalchemy = "*"

[tool.poetry.dev-dependencies]
sqlbag = "*"
pytest = "*"
pytest-cov = "*"
pytest-sugar = "*"
psycopg2-binary = "*"
flake8 = "*"
isort = "*"
migra = "*"
black = { version = ">=19.10b0", python=">=3.6" }
mypy = "^0.761"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 88

[tool.black]
line-length = 88